Fixed support on mobile

--- a/client/src/containers/shared/nav/nav.scss
+++ b/client/src/containers/shared/nav/nav.scss
@@ -49,10 +49,9 @@
   max-width: 100vw;
   border-top: 1px solid black;
   background: white;
-  // padding: 8px 0;
   height: 56px;
   
-  .btn-support {
+  .btn.btn-support {
     display: block;
     margin: 0 auto;
     height: 100%;
